# libigl-example-project

./: .gitmodules  CMakeLists.txt  configure.sh  imgui_menu.h  main.cpp  menu_extra.h  slicing_plugin.h
cmake/: FindLIBIGL.cmake  SetEmscripten.cmake
imgui/: ImGuiHelpers.h  ImGuiMenu.cpp  ImGuiMenu.h
imguizmo/: ImGuizmo.cpp  ImGuizmo.h
